--- a/index.html
+++ b/index.html
@@ -14,16 +14,46 @@
 </head>
 
 <body>
-
+    <!--Jumbotron-->
     <div class="container">
 
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4">New York Times Search</h1>
-                <p class="lead">
-                </p>
-            </div>
+        <div class="jumbotron" style="background-color: navy ; color: white;">
+            <h1 class="text-center">
+                <strong>
+                    <i class="fa fa-newspaper-o"></i> New York Times Search</strong>
+            </h1>
         </div>
+    </div>
+    <!--Form-->
+    <form>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Search Term</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Roosevelt">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Number of Records to Retrieve:</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="10">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Start Year(Optional):</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="1923">
+        </div>
+
+        <div class="form-group">
+            <label for="exampleInputPassword1">End Year (Optional):</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="1929">
+        </div>
+
+
+
+        <button type="Search" class="btn btn-primary">Search</button>
+    </form>
+
+
+
+
+
 
 </body>
 
